catkin_ws/logs/px4_offboard/build.make.002.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:19:38: error: ‘tagCallback’ was not declared in this scope
       "/tag_detections_image", 100, &tagCallback);
                                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:43:24: error: ‘PoseArray’ in namespace ‘geometry_msgs’ does not name a type
 void tagCallback(const geometry_msgs::PoseArray tag_pose) {
                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:43:49: error: ISO C++ forbids declaration of ‘tag_pose’ with no type [-fpermissive]
 void tagCallback(const geometry_msgs::PoseArray tag_pose) {
                                                 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp: In function ‘void tagCallback(int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:49:16: error: request for member ‘poses’ in ‘tag_pose’, which is of non-class type ‘const int’
   if (tag_pose.poses[0].pose.orientation.x > 0.1)
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:51:21: error: request for member ‘poses’ in ‘tag_pose’, which is of non-class type ‘const int’
   else if (tag_pose.poses[0].pose.orientation.x < -0.1)
                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:54:16: error: request for member ‘poses’ in ‘tag_pose’, which is of non-class type ‘const int’
   if (tag_pose.poses[0].pose.orientation.y > 0.1)
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:56:21: error: request for member ‘poses’ in ‘tag_pose’, which is of non-class type ‘const int’
   else if (tag_pose.poses[0].pose.orientation.y < -0.1)
                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:59:16: error: request for member ‘poses’ in ‘tag_pose’, which is of non-class type ‘const int’
   if (tag_pose.poses[0].pose.orientation.z > 0.1)
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/apriltag.cpp:61:21: error: request for member ‘poses’ in ‘tag_pose’, which is of non-class type ‘const int’
   else if (tag_pose.poses[0].pose.orientation.z < -0.1)
                     ^
make[2]: *** [CMakeFiles/apriltag.dir/src/apriltag.cpp.o] Error 1
make[1]: *** [CMakeFiles/apriltag.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
